# bank-statement-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: loaderExample.ipynb
src/bankparser/: __init__.py
src/bankparser/comparator/: __init__.py  comparator.py
src/bankparser/loader/: __init__.py  base_loader.py  csv_loader.py  pdf_loader.py
src/bankparser/models/: __init__.py  category.py  transaction.py
src/bankparser/parser/: __init__.py  bancolombia_parser.py  base_parser.py  csv_parser.py  global66_parser.py  lulo_bank_parser.py  nequi_parser.py  payoneer_parser.py
src/bankparser/utils/: __init__.py  casting.py
tests/: test_bancolombia_parser.py  test_base_parser_extract_data.py  test_base_parser_table_extract.py  test_casting.py  test_csv_loader.py  test_csv_parser.py  test_global66_parser.py  test_lulo_bank_parser.py  test_nequi_parser.py  test_payoneer_parser.py  test_pdf_loader.py
